Work on TextField Error validation

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,4 +9,6 @@
     <color name="white">#FFFFFFFF</color>
 
     <color name="teal_1">#2196F3</color>
+
+    <color name="red">#F44336</color>
 </resources>
